<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".BookDetailFragment">


    <TextView
        android:id="@+id/tvTitleDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Name"/>

    <ImageView
        android:id="@+id/ic_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_location_24"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitleDetails"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvAuthorDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textAppearance="?attr/textAppearanceBody2"
        app:layout_constraintTop_toTopOf="@id/ic_location"
        app:layout_constraintBottom_toBottomOf="@id/ic_location"
        app:layout_constraintStart_toEndOf="@id/ic_location"
        tools:text="Address"/>

    <View
        android:id="@+id/divider_location"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/dividerHorizontal"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/ic_location"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ic_calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_calendar_24"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/divider_location"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvBookReadDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textAppearance="?attr/textAppearanceBody2"
        app:layout_constraintTop_toTopOf="@+id/ic_calendar"
        app:layout_constraintBottom_toBottomOf="@id/ic_calendar"
        app:layout_constraintStart_toEndOf="@id/ic_calendar"
        tools:text="Leído" />

    <View
        android:id="@+id/divider_season"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/dividerHorizontal"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/ic_calendar"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ic_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_notes_24"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/divider_season"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvNoteDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="6"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:singleLine="false"
        android:textAppearance="?attr/textAppearanceBody2"
        app:layout_constraintStart_toEndOf="@id/ic_note"
        app:layout_constraintTop_toTopOf="@+id/ic_note"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Notes" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabEditBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_edit_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>